fix(web-components): update focused styling for accordion in high contrast mode
Update focused styling for accordion in high contrast mode so that a border appears

. #2172

--- a/packages/web-components/src/components/ic-accordion/ic-accordion.css
+++ b/packages/web-components/src/components/ic-accordion/ic-accordion.css
@@ -113,3 +113,9 @@ button:disabled {
 .expanded-content-opened {
   overflow: visible;
 }
+
+@media (forced-colors: active) {
+  button:focus {
+    border: var(--ic-hc-border) !important;
+  }
+}
